--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p id="end-message">You have finished the game!</p>
         <p id="end-score">Your score: <span id="final-score">0</span></p>
         <p id="end-time">Time taken: <span id="final-time">00:00</span></p>
-        <input type="button" class="interface_btn white shadow" id="restart-game" value="Restart Game" onclick="restart_game()">
+        <input type="button" class="interface_btn white shadow" id="restart-game" value="Restart Game" onclick="start_game()">
     </div>
     <div id="header">
         <input type="button" class="interface_btn white shadow start_button" id="start-game" value="Start Game" onclick="start_game()">
@@ -70,14 +70,12 @@
                     </span>
                 </span>
                 <span class="mcui-arrow">
-                    <br>
                 </span>
                 <span class="mcui-output">
                     <span class="invslot invslot-large" id="craft-result">
                         
                     </span>
                 </span>
-                <br>
                 <div id="wanted" style="display: none;">
                     <h1>Wanted Item</h1>
                     <div id="found-items">
