Ajout bouton close

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p id="end-score">Your score: <span id="final-score">0</span></p>
         <p id="end-time">Time taken: <span id="final-time">00:00</span></p>
         <input type="button" class="interface_btn white shadow" id="restart-game" value="Restart Game" onclick="start_game()">
+        <input type="button" class="interface_btn white shadow" id="close" value="Close" onClick="close_end_interface()">
     </div>
     <div id="header">
         <input type="button" class="interface_btn white shadow start_button" id="start-game" value="Start Game" onclick="start_game()">
