--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div id="container" style="display: flex;">
         <div id="select-item">
-            <h1>Items</h1>
+            <h1 class="no_mobile">Items</h1>
             <div id="item_selected" class="btn_in_game"></div>
             <input type="text" class="invslot search_bar white shadow" id="search" placeholder="Search for items..." oninput="display_item(this.value)" onclick="this.value = ''; display_item('')">
             <div id="items_list">
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div id="craft-table">
-            <h1>Crafting Table</h1>
+            <h1 class="no_mobile">Crafting Table</h1>
             <span class="mcui pixel-image" id="crafting-grid">
                 <div class="mcui-Crafting_Table">
                     <span class="mcui-input">
