--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     <div id="container" style="display: flex;">
         <div id="select-item">
             <h1 class="no_mobile">Items</h1>
-            <div id="item_selected" class="btn_in_game"></div>
-            <input type="text" class="invslot search_bar white shadow" id="search" placeholder="Search for items..." oninput="display_item(this.value)" onclick="this.value = ''; display_item('')">
+            <div id="search_bar_div">
+                <input type="text" class="invslot search_bar white shadow" id="search" placeholder="Search for items..." oninput="display_item(this.value)" onclick="this.value = ''; display_item('')">
+                <div id="item_selected" class="btn_in_game"></div>
+            </div>
             <div id="items_list">
                 
             </div>
