--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 <div id="item_selected" class="btn_in_game"></div>
             </div>
             <div id="items_list">
-                
             </div>
         </div>
         <div id="craft-table">
@@ -81,6 +80,7 @@
                         </span>
                     </span>
                 </div>
+                <input type="button" class="clear_btn white shadow" id="craft-btn" value="" onClick="clear_table()">
                 <div id="wanted" style="display: none;">
                     <h1>Wanted Item</h1>
                     <div id="found-items">
