--- a/index.html
+++ b/index.html
@@ -90,12 +90,9 @@
             </span>
         </div>
     </div>
-
-
     <script>
-        set_item_selected("minecraft_oak_planks")
         display_item("")
+        set_item_selected("minecraft_sand")
     </script>
-    
 </body>
 </html>
