--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </div>
     <div id="information" class="white shadow mcui" style="display: none;">
         <h1>Information</h1>
-        <p>This game is a crafting simulation where you can create items using a crafting table. Search for items, place them in the crafting grid, and see what you can create!</p>
-        <p>Use the search bar to find specific items, and click on them to select them for crafting.</p>
+        <p>Le but du jeu est de tester votre connaissance des crafts sur Minecraft !</p>
+        <p>Vous avez 60 secondes pour trouver le plus de crafts, sachant que à chaque item trouvé 10 secondes sont rajoutée au compteur.</p>
+        <p>La table de craft agit à la fois comme une table de craft, comme un four, ou un stonecutter.</p>
+        <p>Par exemple, mettez un minerai de fer n'importe ou dans la table de craft et vous "craftez" un lingot.</p>
         <input type="button" class="interface_btn white shadow" id="close-info" value="Close" onClick="information()">
     </div>
     <div id="header">
