--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="style/get_item.css">
     <link rel="stylesheet" href="style/interface.css">
     <link rel="stylesheet" href="style/end_game.css">
+
+    <!-- favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="end-game" class="white shadow mcui" style="display: none;">
