Retirage des four

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h1>Information</h1>
         <p>Le but du jeu est de tester votre connaissance des crafts sur Minecraft !</p>
         <p>Vous avez 60 secondes pour trouver le plus de crafts, sachant que à chaque item trouvé 10 secondes sont rajoutée au compteur.</p>
-        <p>La table de craft agit à la fois comme une table de craft, comme un four, ou un stonecutter.</p>
-        <p>Par exemple, mettez un minerai de fer n'importe ou dans la table de craft et vous "craftez" un lingot.</p>
+        <!-- <p>La table de craft agit à la fois comme une table de craft, comme un four, ou un stonecutter.</p>
+        <p>Par exemple, mettez un minerai de fer n'importe ou dans la table de craft et vous "craftez" un lingot.</p> -->
         <input type="button" class="interface_btn white shadow" id="close-info" value="Close" onClick="information()">
     </div>
     <div id="header">
