--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h1>Information</h1>
         <p>Le but du jeu est de tester votre connaissance des crafts sur Minecraft !</p>
         <p>Vous avez 60 secondes pour trouver le plus de crafts, sachant que à chaque item trouvé 10 secondes sont rajoutée au compteur.</p>
+        <p>Vous pouvez skip un item mais cela vous donne une pénalité de 10 secondes.</p>
         <!-- <p>La table de craft agit à la fois comme une table de craft, comme un four, ou un stonecutter.</p>
         <p>Par exemple, mettez un minerai de fer n'importe ou dans la table de craft et vous "craftez" un lingot.</p> -->
         <input type="button" class="interface_btn white shadow" id="close-info" value="Close" onClick="information()">
@@ -95,6 +96,7 @@
                     </span>
                 </div>
                 <input type="button" class="clear_btn white shadow" id="craft-btn" value="" onClick="clear_table()">
+                <input type="button" class="skip_btn white shadow" id="skip-btn" value="Skip" onClick="skip()">
                 <div id="wanted" style="display: none;">
                     <h1 class="no_mobile">Wanted Item</h1>
                     <div id="found-items">
