reduce time to search

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     </div>
     <script>
-        display_item("")
+        initialise_items("")
         set_item_selected("minecraft_oak_planks")
 
         var number_test = 5000;
