--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         initialise_items("")
         set_item_selected("minecraft_oak_planks")
 
-        var number_test = 5000;
+        // var number_test = 500;
         // for (let i = 0; i < number_test; i++) {
         //     new_wanted_item()
         //     try{
