--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
         <div class="info-items-set" style="display: none;">
             <h1>Items Set</h1>
-            <p>This mode allows you to play with a specific set of items.</p>
-            <p>You can select the items you want to include in the game.</p>
-            <p>Use the search bar to find items and add them to your set.</p>
+            <p>In this game mode, you start with a set of 25 initial items.</p>
+            <p>Find as many crafts as possible using only these items.</p>
+            <p>The crafted items are added to the list, allowing you to create even more crafts!</p>
             <input type="button" class="interface_btn white shadow" id="close-info-set" value="Close" onClick="information()">
         </div>
     </div>
