fond vert pour les items trouvés

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <p>In this game mode, you start with a set of 25 initial items.</p>
             <p>Find as many crafts as possible using only these items.</p>
             <p>The crafted items are added to the list, allowing you to create even more crafts!</p>
+            <p>The item set updates every day at noon, French time.</p>
             <input type="button" class="interface_btn white shadow" id="close-info-set" value="Close" onClick="information()">
         </div>
     </div>
