Text de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 <body>
     <h1>Recipedia</h1>
     <div id="header-text">
-        <p>Welcome to the Recipedia! This is a simple HTML page.</p>
-        <p>Feel free to explore and learn more about Minecraft crafting recipes.</p>
-        <p>For more information, visit the <a href="https://minecraft.fandom.com/wiki/Crafting">Minecraft Wiki</a>.</p>
-        <p>Enjoy your crafting journey!</p>
+        <p>Welcome to the Recipedia !</p>
+        <p>This site is designed to test your knowledge of Minecraft crafts.</p>
+        <p>To your craft tables !</p>
     </div>
     <div class="game-mode-div">
         <div class="game-div" id="SpeedCraft">
@@ -29,7 +28,7 @@
         </div>
         <div class="game-div" id="RecursiveCraft">
             <h2>Recursive Craft</h2>
-            <p>Craft items recursively to create complex recipes !</p>
+            <p>Find as many crafts as possible from a defined set of items.</p>
             <a href="game.html?mode=items-set&cumulative=true" class="btn_in_game">
                 <img src="items/texture/minecraft_chest.png" alt="Recursive Craft" class="game-icon">
                 Recursive Craft
