--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="style/end_game.css">
     <link rel="stylesheet" href="style/items_set.css">
     <link rel="stylesheet" href="style/timer.css">
+    <link rel="stylesheet" href="style/crafting.css">
 
     <!-- favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -50,6 +51,11 @@
             <p>Find as many crafts as possible using only these items.</p>
             <p>The crafted items are added to the list, allowing you to create even more crafts!</p>
             <p>The item set updates every day at noon, French time.</p>
+            <input type="button" class="interface_btn white shadow" id="close-info-set" value="Close" onClick="information()">
+        </div>
+        <div class="info-crafting" style="display: none;">
+            <h1>Free Crafting</h1>
+            <p>In this game mode, you can craft freely without any restrictions.</p>
             <input type="button" class="interface_btn white shadow" id="close-info-set" value="Close" onClick="information()">
         </div>
     </div>
