--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             </a>
         </div>
     </div>
+    <div class="game-mode-div">
+        <div class="game-div" id="SpeedCraft">
+            <a href="game.html?mode=crafting" class="btn_in_game">
+                <img src="items/texture/minecraft_crafting_table.png" alt="free cratging" class="game-icon">
+                Crating free
+            </a>
+        </div>
+    </div>
     <div id="footer">
         <p>&copy; 2025 Recipedia. All rights reserved.</p>
         <p>Created by NekShor.</p>
