Ajout de l'alerte

--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="style/items_set.css">
     <link rel="stylesheet" href="style/timer.css">
     <link rel="stylesheet" href="style/crafting.css">
+    <link rel="stylesheet" href="style/alert.css">
 
     <!-- favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -124,8 +125,8 @@
             </span>
         </div>
     </div>
-    <div id="test">
-
+    <div id="alert">
+        <p>This site is in beta version; there may be bugs or unfinished features. Feel free to report them to me.</p>
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
