--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/get_item.css">
     <link rel="stylesheet" href="style/interface.css">
     <link rel="stylesheet" href="style/accueil.css">
+    <link rel="stylesheet" href="style/alert.css">
 </head>
 <body>
     <h1>Recipedia</h1>
@@ -73,6 +74,9 @@
                 </a>
             </div>
         </div>
+    </div>
+    <div id="alert">
+        <p>This site is in beta version; there may be bugs or unfinished features. Feel free to report them to me.</p>
     </div>
 </body>
 </html>
