--- a/game.html
+++ b/game.html
@@ -72,6 +72,9 @@
             <span id="score-value">0</span>
         </div>
         <input type="button" class="interface_btn white shadow information_button" id="information_btn" value="I" data-open="false" onclick="information(this)">
+        <a type="button" class="interface_btn white shadow home_button" id="home_btn" href="index.html">
+            <img src="images/home.svg" alt="Home" style="width: 20px; height: 20px;">
+        </a>
     </div>
     <div id="container" style="display: flex;">
         <div id="select-item">
@@ -116,7 +119,7 @@
                     <input type="button" class="clear_btn white shadow" id="craft-btn" value="" onClick="clear_table()">
                     <input type="button" class="skip_btn white shadow" id="skip-btn" value="Skip" onClick="skip()">
                 </div>
-                <div id="wanted" style="">
+                <div id="wanted">
                     <h1 class="no_mobile">Wanted Item</h1>
                     <div id="found-items">
         
